styling: fixed z-index for hamburger menu / character image clash

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -38,6 +38,10 @@ h2 {
   margin: 16px 0;
 }
 
+nav {
+  z-index: 2;
+}
+
 .burger-menu-links-container {
   display: flex;
   flex-direction: column;
@@ -113,6 +117,7 @@ h2 {
 .race-card:hover {
   box-shadow: none;
   opacity: 0.85;
+  transition: all 0.2s ease-in-out;
 }
 
 .card-background {
@@ -154,6 +159,7 @@ h2 {
 .creator {
   flex-direction: row;
   justify-content: center;
+  padding-top: 110px;
 }
 
 .creator-card {
@@ -653,5 +659,8 @@ h2 {
   .main,
   .creator {
     padding: 30px 150px;
+  }
+  .link {
+    font-size: 32px;
   }
 }
